--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-vertical-timeline-component": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
